--- a/_posts/2092-5-19-申论(素材积累).md
+++ b/_posts/2092-5-19-申论(素材积累).md
@@ -4,7 +4,7 @@ title: 申论/素材积累
 author: Rody
 ---
 
-不到长城非好汉，不进省直誓不还
+不进省直誓不还
 
 ### 一，申论字体—格子体
 
@@ -141,4 +141,116 @@ author: Rody
 金杯银杯 不如老百姓的口碑
 
 金奖银奖 比不上老百姓的夸奖
+
+#### 3，国无德不兴
+
+- 为什么立德
+
+> 国无德不兴，人无德不立
+
+习：人而无德，行而不远；
+
+习曾提出过：四维不张，国乃灭亡     《管子》
+
+四维：礼义廉耻
+
+礼：法律准则和道德规范
+
+义：公平正义
+
+廉：公正廉洁
+
+耻：有羞耻之心，不纵容邪恶
+
+（国家层面）富强、民主、文明、和谐；
+
+（社会层面）自由、平等、公正、法治；
+
+（公民层面）爱国、敬业、诚信、友善。
+
+> 师德：李保国
+>
+> 始终坚守为人民做学问的学问方向，常年深入太行山区，把农民的需求作为自己的科研课题，把论文写在太行上大地上，把成果留在农民的家里。
+>
+> 通过自己的研究成果，帮助太行山区提高农业产值达25亿之高。
+>
+> 习高度赞誉：“称其为太行山上的新愚公”
+
+- 立什么德
+
+> 《礼记·大学》
+>
+> 大学之道，在明明德，在亲民，在止于至善，
+>
+> 《爱莲说》 宋 周敦颐
+>
+> 予独爱莲之出淤泥而不染，濯清涟而不妖
+
+明大德
+
+守公德
+
+严私德
+
+习：格物致知，诚意正心，修身齐家治国平天下
+
+- 如何修德
+
+勤学：向道德模范学习
+
+> 龚全珍，开国将军的夫人，回到家乡当回了人民，讲革命传统，讲革命信念
+>
+> 关心社会，帮助他人
+
+明辨：善于做出选择
+
+正确的世界观，价值观，人生观
+
+笃实：落到实处
+
+> 勿以善小而不为
+>
+> 勿以恶小而为之
+>
+> 善不积不足以成名
+>
+> 恶不积不足以灭身
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
