--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -1098,6 +1098,116 @@ incredibly 及其、非常
 
 crucial 关键的、决定性的
 
+#### 2021-7-20
+
+justice has been served 正义得到了伸张
+
+livestock 家畜，畜牧业
+
+livestock production 家畜饲养
+
+account for 考虑到，把...算在内，做出解释，导致，引起
+
+greenhouse gas emissions 温室气体排放
+
+ancestor 祖先
+
+property 财产，地产
+
+digital 数字的，数码化的
+
+censorship 审查，检查
+
+digital censorship 数字审查
+
+how you are able to do some of the things you do 你怎么能做下那些事情
+
+flatter 更平的，奉承，恭维
+
+advancement 进展，提升，升值
+
+in hope of 为了，希望
+
+harm 损害，削弱
+
+harmless 无害的
+
+immunity 免疫，免疫力，豁免，免除
+
+bacteria cell 细菌细胞
+
+digest 消化，领会，摘要
+
+digestion 消化
+
+#### 2021-7-22
+
+accusation 指控，职责
+
+among 在...中间，属于其中，在...之间
+
+witness 见证人，目击，注意到
+
+Atlantic 大西洋的
+
+racist 种族主义
+
+slave 奴隶
+
+ideology 意识形态，主义，政治学说
+
+rescue 营救，从...救出来
+
+intervention 干涉，干预，影响
+
+#### 2021-7-23
+
+wage 工资
+
+developed countries 发达国家
+
+imbalance 不平衡
+
+concrete 实在的，混凝土，现实的
+
+concrete blocks 混凝土砌块
+
+construction 建造，建筑物
+
+most-used 最常用的
+
+conquer 征服
+
+promised land 乐土，天堂
+
+hideous 骇人的，难看的，丑陋的
+
+put sb through 让...经历
+
+entitle 给...起名，赋予...权利
+
+defense 防御，辩护
+
+everyone is entitled to defense 人人都有辩护权
+
+assault 攻击，袭击，故意伤害
+
+soldier 士兵，军人
+
+principle 基本原则，道德准则
+
+principal 主要的，为主的
+
+
+
+
+
+
+
+
+
+
+
 
 
 
