--- a/_posts/2092-5-19-日常语料.md
+++ b/_posts/2092-5-19-日常语料.md
@@ -48,6 +48,10 @@ author: Rody
 
 撰zhuan写：写作
 
+飨xiang：设酒宴招待，请人享用，以飨读者
+
+
+
 #### 2，成语
 
 **泽被后世**，zé pī hòu shì，意思是恩惠遍及到后代的人民。 出自《崇高的理想》
@@ -227,6 +231,12 @@ author: Rody
 #### 1，发展阶段
 
 `立足新发展阶段，贯彻新发展理念，构建新发展格局`
+
+新发展阶段：（党的十九届五中全会提出）全面建成小康社会、实现第一个百年奋斗目标之后，我们要乘势而上开启全面建设社会主义现代化国家新征程、向第二个百年奋斗目标进军
+
+新发展理念：创新、协调、绿色、开放、共享的发展理念
+
+新发展格局：国内大循环为主体，国内国际双循环相互促进
 
 ### 十二、创新
 
