--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -304,6 +304,8 @@ vegan dishes 素菜
 
 crush 用力压，碾压，摧毁
 
+crash 碰撞，撞上
+
 i have no friends at school 我在学校没有朋友
 
 whether you believe it or not 不论你信不信
@@ -317,6 +319,8 @@ i think we'd（would） make a good team 我觉得我们会成为很好的搭档
 shitty 差的、劣等的
 
 stain 弄脏、污点、斑点 
+
+stain my soul 污染我的灵魂
 
 astronomy 天文学
 
@@ -1198,9 +1202,49 @@ principle 基本原则，道德准则
 
 principal 主要的，为主的
 
+#### 2021-7-28
 
+either 或者，任何一个，两者之一
 
+either or 两者取一，非此即彼
 
+villain 坏人，恶棍，反派人物
+
+die a hero 成为烈士
+
+estimate 评估，预计，预算
+
+underestimate 低估，小看
+
+lucrative 高利润的，赚钱多的
+
+what i'm about to propose 我要建议的是
+
+you have no control over me 你不能控制我
+
+soar 飞升，滑翔
+
+sour 算的，变质的，损坏
+
+arousal 性唤醒，觉醒，激动
+
+release 释放，放手，松开
+
+cocktail 鸡尾酒，短裙
+
+hormone 荷尔蒙，激素
+
+feel-good 感觉良好的
+
+stage 阶段，时期，步骤
+
+domestic 家庭的，本国的
+
+violence 激烈，暴力
+
+domestic violence relationship 家庭暴力关系
+
+victim 受害者
 
 
 
