--- a/_posts/2092-5-19-党史记录.md
+++ b/_posts/2092-5-19-党史记录.md
@@ -118,6 +118,12 @@ author: Rody
 
 全面建成小康社会（全面建设社会主义现代化国家）、全面深化改革、全面依法治国、全面从严治党。
 
+**全面深化改革的总目标**：完善和发展中国特色社会主义制度、推进国家治理体系和治理能力现代化
+
+#### 8. 三大攻坚战
+
+防范化解重大风险，精准脱贫，污染防治
+
 ### 党的部分理论
 
 #### 1，三个代表
@@ -131,6 +137,14 @@ author: Rody
 #### 1，党引领的成就
 
 > 为了实现中华民族伟大复兴，中国共产党团结带领中国人民，创造了新民主主义革命的伟大成就，创造了社会主义革命和建设的伟大成就，创造了改革开放和社会主义现代化建设的伟大成就，创造了新时代中国特色社会主义的伟大成就。
+
+#### 2，不可逆转
+
+> 实现中华民族伟大复兴进入了不可逆转的历史进程
+
+不可逆转的内涵：
+
+党和国家事业取得历史性成就、发生历史性变革，为实现中华民族伟大复兴提供了更为完善的制度保证、更为坚实的物质基础、更为主动的精神力量。
 
 
 
