--- a/_posts/2092-5-19-日常语料.md
+++ b/_posts/2092-5-19-日常语料.md
@@ -50,6 +50,8 @@ author: Rody
 
 飨xiang：设酒宴招待，请人享用，以飨读者
 
+汔 /qì/：差不多，几乎    汔可小康
+
 
 
 #### 2，成语
@@ -69,6 +71,10 @@ author: Rody
 > 临渊羡鱼，不如退而结网；扬汤止沸，不如釜底抽薪。
 
 **方兴未艾**：新生事物正在蓬勃发展。
+
+**和衷共济**：比喻同心协力共渡难关。
+
+
 
 ### 三，文言文积累背诵
 
@@ -273,36 +279,6 @@ author: Rody
 人才——功以才成，业由才广
 
 “栽下梧桐树，引来金凤凰”
-
-### 十四、创意小标题
-
-#### 1，生态方面
-
-##### （1）标题1
-
-`建设人与自然和谐共生的美丽中国`
-
-——以习近平同志为核心的党中央推进生态文明建设纪实
-
-**深谋远虑**
-
-建设生态文明求解人与自然和谐共生之道
-
-**久久为功**
-
-美丽中国建设迈出坚实步伐
-
-**擘画新篇**
-
-未开启全面建设社会主义现代化国家新征程奠定坚实环境基础。
-
-##### （2）标题2
-
-万物并育：统筹山水林田湖草沙系统治理
-
-生态文明新形态：人与自然是生命共同体
-
-环球同此凉热：人类命运共同体的绿色途径
 
 ### 十五、党
 
