--- a/_posts/2092-5-19-申论(素材积累).md
+++ b/_posts/2092-5-19-申论(素材积累).md
@@ -216,7 +216,61 @@ author: Rody
 >
 > 恶不积不足以灭身
 
+### 三，亮点标题
 
+#### 1，经济方面
+
+#### 2，政治方面
+
+#### 3，社会方面
+
+#### 4，文化方面
+
+#### （1）标题1
+
+>新的征程上，必须坚持把马克思主义基本原理同中国具体实际相结合、同中华优秀传统文化相结合。
+>
+>这个重大观点深刻反映了新时代中国共产党人对中华优秀传统文化地位和作用的全新认识，极大拓展了马克思主义中国化的内涵。
+
+相通的人民立场、天下情怀
+
+中华优秀传统文化滋养中国共产党的初心
+
+相通的实践观点、执着精神
+
+中华优秀传统文化激励中国共产党的奋斗
+
+相通的兼容气度、开放胸襟
+
+中华优秀传统文化激发中国共产党的活力
+
+#### 5，生态文明方面
+
+##### （1）标题1
+
+`建设人与自然和谐共生的美丽中国`
+
+——以习近平同志为核心的党中央推进生态文明建设纪实
+
+**深谋远虑**
+
+建设生态文明求解人与自然和谐共生之道
+
+**久久为功**
+
+美丽中国建设迈出坚实步伐
+
+**擘画新篇**
+
+未开启全面建设社会主义现代化国家新征程奠定坚实环境基础。
+
+##### （2）标题2
+
+万物并育：统筹山水林田湖草沙系统治理
+
+生态文明新形态：人与自然是生命共同体
+
+环球同此凉热：人类命运共同体的绿色途径
 
 
 
