--- a/_posts/2092-5-19-党史记录.md
+++ b/_posts/2092-5-19-党史记录.md
@@ -124,6 +124,12 @@ author: Rody
 
 防范化解重大风险，精准脱贫，污染防治
 
+#### 9，三个不相信
+
+人民军队发出“三个不相信”的英雄宣言：
+
+不相信有完不成的任务，不相信有克服不了的困难，不相信有战胜不了的敌人
+
 ### 党的部分理论
 
 #### 1，三个代表
@@ -146,5 +152,9 @@ author: Rody
 
 党和国家事业取得历史性成就、发生历史性变革，为实现中华民族伟大复兴提供了更为完善的制度保证、更为坚实的物质基础、更为主动的精神力量。
 
+#### 3，五史
 
+> 不懈奋斗史，不怕牺牲史，理论探索史，为民造福史，自身建设史
+
+百年党史的主流和本质有了更精准、更厚重、更与时俱进的阐述
 
