--- a/_posts/2092-5-19-新闻记录随笔.md
+++ b/_posts/2092-5-19-新闻记录随笔.md
@@ -52,7 +52,11 @@ author: Rody
 
 汔 /qì/：差不多，几乎    汔可小康
 
+又双叒叕：you shuang ruo zhuo
 
+叒：好朋友之间同心同德，相互扶持
+
+叕：表示短或不足
 
 #### 2，成语
 
@@ -147,6 +151,10 @@ author: Rody
 #### 2，民生
 
 总书记深情地说，”让人民生活幸福是'国之大者'“。
+
+#### 3，四有新人
+
+有理想，有道德，有文化，有纪律
 
 ### 七、文化
 
@@ -274,25 +282,15 @@ author: Rody
 
 ### 十三、人才
 
-#### 1，重要性
+1，重要性
 
 人才——功以才成，业由才广
 
 “栽下梧桐树，引来金凤凰”
 
-### 十五、党
 
-#### 1，初心和使命
 
-为中国人民谋幸福
 
-为中华民族谋复兴
-
-#### 2，五史
-
-> 不懈奋斗史，不怕牺牲史，理论探索史，为民造福史，自身建设史
-
-百年党史的主流和本质有了更精准、更厚重、更与时俱进的阐述
 
 
 
