--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -1246,7 +1246,67 @@ domestic violence relationship 家庭暴力关系
 
 victim 受害者
 
+#### 2021-7-29
 
+trade 贸易，交易
+
+growth 发育，成长，发展
+
+widely 广泛地
+
+original 原件，本人，最初的
+
+indicate 指示，表现出，表明
+
+defy 反抗，违抗
+
+gravity 地心引力
+
+stature 身高，身材，名望
+
+diagnose 诊断，确诊
+
+be diagnosed with 被诊断为
+
+at age 11 在11岁时
+
+was cut from his team 被球队裁掉
+
+growth hormone deficiency 生长激素缺乏
+
+#### 2021-7-30
+
+congolese 刚果人，刚果的
+
+mutilate 使伤残
+
+traumatised 使受精神创伤的
+
+obstacle 障碍，妨碍
+
+hurdle 障碍，困难，跨栏比赛
+
+hurdle over  越过，跳过，克服
+
+government 政府
+
+prioritize 优先考虑，按重要性排列
+
+as the days went on 日复一日  as和has读音的差别
+
+consume 消耗，支配，烧毁
+
+darken 变深，变暗，使阴郁，使不高兴
+
+paranoia 妄想狂，疑心病
+
+vengeance 报复，报复行为
+
+revenge n报仇
+
+in revenge for 出于...复仇
+
+to 和 through 的读音混淆
 
 
 
