--- a/_posts/2092-5-19-新闻记录随笔.md
+++ b/_posts/2092-5-19-新闻记录随笔.md
@@ -78,6 +78,20 @@ author: Rody
 
 **和衷共济**：比喻同心协力共渡难关。
 
+**渊渟岳峙**：yuān tíng yuè zhì 比喻人品德如渊水深沉，如高山耸立。 出自《楚妃叹》。
+
+**钟灵琉秀**：凝聚大自然灵气的地方孕育优秀人才
+
+**击节赞叹**：形容对别人的诗文或艺术等的赞赏
+
+**低头折节**：丧失气节，屈服于他人
+
+**额手称庆**：指庆幸，形容令人称快的事情
+
+**微言大义**：用精当的言辞阐述儒家经典的要义；现指含蓄的语言中包含的十分深刻的道理
+
+**左支右绌**：chu 顾了左边，顾不了右边。形容力量不足，穷于应付
+
 
 
 ### 三，文言文积累背诵
