--- a/_posts/2092-5-19-申论(素材积累).md
+++ b/_posts/2092-5-19-申论(素材积累).md
@@ -26,7 +26,7 @@ author: Rody
 
 #### 1，一枝一叶总关情
 
-- 来源
+（1）**来源**
 
 > 《潍县署中画竹呈年伯包大丞括 / 墨竹图题诗》
 >
@@ -36,7 +36,7 @@ author: Rody
 >
 > 些小吾曹州县吏，一枝一叶总关情。
 
-- 民心
+（2）**民心**
 
 >《牧民》 
 >
@@ -48,7 +48,7 @@ author: Rody
 
 感悟：一个政党，一个政权，其前途命运最终取决于人心向背。
 
-- 焦裕禄
+（3）**焦裕禄**
 
 > 焦裕禄
 >
@@ -72,7 +72,7 @@ author: Rody
 
 现在有的地方提出：最多跑一次，只进一扇门，让老百姓少跑腿，干部多办事，让人民放心、安心、舒心。
 
-- 为民
+（4）**为民**
 
 > 清万斯（清代）
 >
@@ -90,7 +90,7 @@ author: Rody
 
 #### 2，治国有常民为本
 
-- 重民生
+（1）**重民生**
 
 > 治国有常 而利民为本
 
@@ -100,7 +100,7 @@ author: Rody
 
 脱贫攻坚工程，是当代中国最大的民生工程，也是当代中国最大的利民、惠民、富民工程
 
-- 兴民德
+（2）**兴民德**
 
 > 管子
 >
@@ -118,7 +118,7 @@ author: Rody
 
 “记住要求 心有榜样 从小做起 接受帮助”
 
-- 得民心
+（3）**得民心**
 
 习总书记：
 
@@ -144,7 +144,7 @@ author: Rody
 
 #### 3，国无德不兴
 
-- 为什么立德
+（1）**为什么立德**
 
 > 国无德不兴，人无德不立
 
@@ -176,7 +176,7 @@ author: Rody
 >
 > 习高度赞誉：“称其为太行山上的新愚公”
 
-- 立什么德
+（2）**立什么德**
 
 > 《礼记·大学》
 >
@@ -194,7 +194,7 @@ author: Rody
 
 习：格物致知，诚意正心，修身齐家治国平天下
 
-- 如何修德
+（3）**如何修德**
 
 勤学：向道德模范学习
 
@@ -215,6 +215,48 @@ author: Rody
 > 善不积不足以成名
 >
 > 恶不积不足以灭身
+
+#### 4，国之本在家
+
+（1）**重视家庭**
+
+> 习曾引用：天下之本在国，国之本在家   
+>
+> 家之本在身
+>
+> 《孟子》
+
+家和万事兴，国家富强，民族复兴，最终体现在千千万万个家庭都生活美满
+
+家庭的前途命运同民族的前途命运紧密相连
+
+> 家齐而后国之，正己始可修身 —苏洵《安乐铭》
+>
+> 苟利国家生死以，岂因祸福避趋之。—林则徐
+
+- 把实现家庭梦融入民族梦之中
+
+> 爱子教之以义方《左传》
+>
+> 爱之不以道，适所以害之也 《资治通鉴》
+
+养不教，父之过
+
+（2）**重视家教**
+
+玉不琢，不成器；人不学，不成义。
+
+严父出孝子
+
+（3）**重视家风**
+
+> 积善之家，必有余庆
+>
+> 积不善之家，必有余殃 《周易·文言》
+
+忠厚传家家长久，诗书继世时代香
+
+评：家风是我们到哪里去的魂，家风是一种情怀，家风是一种积淀，家风是一种信仰，家风是中华文明的璀璨明珠 
 
 ### 三，亮点标题
 
