--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -1308,13 +1308,61 @@ in revenge for 出于...复仇
 
 to 和 through 的读音混淆
 
+#### 2021-8-4
 
+a new system of 一个新系统
 
+under 和 on the 
 
+throughout 自始至终，整，到处，在...的整个过程
 
+captivate 俘获，使着迷
 
+captivity 囚禁，被限制
 
+exhaust 使疲惫，用尽，耗尽
 
+drill hole 钻孔
+
+seal 海豹，密封
+
+confront 直面，面对，与...对峙
+
+a hit of hormones 大量荷尔蒙
+
+tyranny 专制统治，暴政
+
+live   /ˈlɪv/
+
+leave /ˈliːv/
+
+#### 2021-8-5
+
+reform 改革，改良，改正
+
+after the reform  /ˈæftɚ/有些会这么读
+
+repression 压制，镇压
+
+execution 死刑，处决，杀害
+
+mass 大量，主体，块
+
+mess 乱糟糟，混乱，杂乱
+
+obscene 可憎的，令人讨厌的，猥亵的
+
+lie n谎言，撒谎，摆着，摆放，躺
+
+liar 说谎者
+
+past 过去的，超过
+
+path 道路
+
+sales 出售，销售额
+
+exceed 超过，越过
 
 
 
