--- a/_posts/2092-5-19-党史记录.md
+++ b/_posts/2092-5-19-党史记录.md
@@ -4,7 +4,7 @@ title: 党的基本
 author: Rody
 ---
 
-### 党的基本知识1
+CPC（Communist Party of China）
 
 #### **1、党的性质**
 
@@ -144,6 +144,10 @@ author: Rody
 
 > 为了实现中华民族伟大复兴，中国共产党团结带领中国人民，创造了新民主主义革命的伟大成就，创造了社会主义革命和建设的伟大成就，创造了改革开放和社会主义现代化建设的伟大成就，创造了新时代中国特色社会主义的伟大成就。
 
+另外一种说法
+
+> 党团结带领我们**浴血奋战、百折不挠**，创造了新民主主义革命的伟大成就；党团结带领我们**自力更生、发愤图强**，创造了社会主义革命和建设的伟大成就；党团结带领我们**解放思想、锐意进取**，创造了改革开放和社会主义现代化建设的伟大成就；党团结带领我们**自信自强、守正创新**，**统揽伟大斗争、伟大工程、伟大事业、伟大梦想**，创造了新时代中国特色社会主义的伟大成就，实现中华民族伟大复兴进入了不可逆转的历史进程！
+
 #### 2，不可逆转
 
 > 实现中华民族伟大复兴进入了不可逆转的历史进程
@@ -157,4 +161,26 @@ author: Rody
 > 不懈奋斗史，不怕牺牲史，理论探索史，为民造福史，自身建设史
 
 百年党史的主流和本质有了更精准、更厚重、更与时俱进的阐述
+
+#### 4，九个必须
+
+“必须坚持中国共产党坚强领导”
+
+“必须团结带领中国人民不断为美好生活而奋斗”
+
+“必须继续推进马克思主义中国化”
+
+“必须坚持和发展中国特色社会主义”
+
+“必须加快国防和军队现代化”
+
+“必须不断推动构建人类命运共同体”
+
+“必须进行具有许多新的历史特点的伟大斗争”
+
+“必须加强中华儿女大团结”
+
+“必须不断推进党的建设新的伟大工程”
+
+
 
