--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -932,6 +932,8 @@ reap the benefit 收获好处
 
 reap 获得，收割
 
+rape 抢掠，强奸
+
 squid 鱿鱼
 
 proceed 行事，继续向前
@@ -1363,6 +1365,48 @@ path 道路
 sales 出售，销售额
 
 exceed 超过，越过
+
+#### 2021-8-19
+
+compete 竞争
+
+adversary 对手、敌手
+
+outsmart 比...聪明，赢过
+
+sometimes a man can meet his destiny on the road he took to avoid it 
+
+instilling 灌输，浇灌
+
+depopulate 是人口大量减少
+
+viral 病毒的，由病毒引起的，热播，流行
+
+filmmaker 电影制作人
+
+film 电影、拍摄
+
+woman /woomen/
+
+women /wimin/
+
+man
+
+men
+
+salmon 三文鱼
+
+roast 烤肉，讥讽，开...玩笑
+
+scrutiny 仔细检查，审视
+
+facilitator 协调员
+
+facilitate 协助，帮助
+
+sanity 健全精神，明智
+
+
 
 
 
