--- a/_posts/2021-5-13-行测(资料分析).md
+++ b/_posts/2021-5-13-行测(资料分析).md
@@ -79,18 +79,32 @@ r=增长量/基期量
 
 #### 3，特殊增长率
 
-**间隔增长率**:      r =r1+r2+r1*r2  （若r1，r2均小于10%，相乘可以忽略）
+**间隔增长率**:   r =r1+r2+r1*r2  （若r1，r2均小于10%，相乘可以忽略，不能忘记正负号）
+
+**间隔基期**：基期量=现期量/1+r间隔
 
 **年均增长率**：（1+r）的n次方=现期量/基期量（n为年份差）
 
 若比较r的大小，即可直接比较现期量/基期量
 
-**混合增长率**：
+**混合增长率**：整体与部分的关系
 
 ```
 1，混合后居中 （整体增长率介于部分增长率之间）
 2，偏向基期较大的
+3，有的题型：部分数量现期之比 等于 平均增长率与部分增长率差值反比
 ```
+
+**增效率小**：当r小于5%时
+
+```
+基期=现期/(1+r)=现期*(1-r)    
+基期=现期/(1-r)=现期*(1+r)    
+```
+
+**增长率不变**：现期量=基期量*（1+r）的n次方
+
+**增长量不变**：现期量=基期量+增长量*n
 
 
 
@@ -197,3 +211,7 @@ r=A/B-1
 大数相加：末位加，记进位，再算末两位
 
 找数：先从B项找，CD选项正确率高
+
+综合选项题：大数据显示，C、D、B、A正确率依次递减
+
+方法：cdba按顺序做，遇到难的跳过
