--- a/_posts/2092-5-19-新闻记录随笔.md
+++ b/_posts/2092-5-19-新闻记录随笔.md
@@ -94,6 +94,18 @@ author: Rody
 
 **循循善诱**：善于有步骤的引导、启发
 
+**相形见绌**：跟另一方相比，显得远远不足
+
+**不屈不挠**：压力和困难面前不屈服，表现十分顽强，但没有体现多次经历挫折（与百折不挠区分）
+
+**无独有偶**：表示两事或两人十分相似
+
+**工力悉敌**：双方用的功夫和力量相当，比喻两个优秀的艺术作品不分上下
+
+**望洋兴叹**：在伟大事物面前感叹自己的渺小，做事力量不足而无可奈何。
+
+
+
 ### 三，文言文积累背诵
 
 #### 1，左传
@@ -264,7 +276,13 @@ author: Rody
 
 新发展理念：创新、协调、绿色、开放、共享的发展理念
 
+```
+创新成为第一动力，协调成为内生特点，绿色成为普遍形态，开放成为必由之路，共享成为根本目标
+```
+
 新发展格局：国内大循环为主体，国内国际双循环相互促进
+
+
 
 ### 十二、创新
 
