--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -726,6 +726,8 @@ the vietnam war began as a regional conflict  and became one of history's worst 
 
 catastrophes 大灾难，惨败
 
+catastrophe
+
 humanitarian 慈善家，人道主义的
 
 humanity 人道，人，人性       /hjuˌmænɪˈtɛriən/
@@ -1406,9 +1408,37 @@ facilitate 协助，帮助
 
 sanity 健全精神，明智
 
+#### 2021-8-25
 
+imminent 即将发生的，逼近的
 
+cheap oil 便宜的石油
 
+to many 对于很多人来说
+
+throne 王位，王座，军权
+
+game of thrones 权利的游戏
+
+besides 此外，而且，除了
+
+aggravate 使恶化，激怒
+
+dust 灰尘
+
+troops 军队
+
+petition 请愿书，向...请愿
+
+petitioners 请愿者
+
+when in doubt 不确定时
+
+remain silent 保持沉默
+
+various methods 不同的方法
+
+accomplish this  完成
 
 
 
