--- a/_posts/2092-5-19-党史记录.md
+++ b/_posts/2092-5-19-党史记录.md
@@ -6,6 +6,8 @@ author: Rody
 
 CPC（Communist Party of China）
 
+### 党的基本知识1
+
 #### **1、党的性质**
 
 中国共产党是中国工人阶级的先锋队，同时是中国人民和中华民族的先锋队，是中国特色社会主义事业的领导核心，代表中国先进生产力的发展要求，代表中国先进文化的前进方向，代表中国最广大人民的根本利益。
@@ -182,5 +184,101 @@ CPC（Communist Party of China）
 
 “必须不断推进党的建设新的伟大工程”
 
+### 中国官员的级别
 
+#### 党职（中共全代会）
 
+##### 中央层面
+
+中国共产党全国代表大会（五年一届）
+
+| 党位分级                                    |
+| ------------------------------------------- |
+| 中共中央总书记                              |
+| 政治局常委（7领导核心）                     |
+| 政治局委员（25-7=18）                       |
+| 中央委员（204-25=179）和中央候补委员（172） |
+
+部长：党内职务
+
+中共中央军委（党职）=国家中央军委（军职）
+
+##### 地方
+
+基本类似，都有省市常委，以及相关任职
+
+#### 党职级别
+
+##### 五类
+
+国家级、省部级、厅局级、县处级、乡科级
+
+##### 十级
+
+每个类别分正副两级
+
+| 级别                   | 人员                                                     |
+| ---------------------- | -------------------------------------------------------- |
+| 正国级                 | 7个政治局常委                                            |
+| 副国级                 | 政治局委员18人                                           |
+| 副国级、省部级、正厅级 | 中央委员（大多省委书记）和中央候补委员（大多是正副省级） |
+| 高级干部行列           | 正厅级以上                                               |
+
+#### 公职（全国人大和政协）
+
+两会五年一届，中共全代会第二年三月召开
+
+2018年第13届
+
+>中国人民代表大会
+>
+>政治协商会议
+
+#### 公职级别
+
+| 级别   | 人员                                                         |
+| ------ | ------------------------------------------------------------ |
+| 正国级 | 国家主席、国务院总理、全国人大常委会委员长、全国政协主席、国家军委主席 |
+| 副国级 | 国家副主席、副委员长、政协副主席、国家军委副主席、副总理（4个一个是正国级政治局常委兼任）、国务委员（5个中央委员兼任协助总理工作）、最高人民法院院长、最高人民检察院院长、国家监察委主任   （25位政治局委员和部分中央委员兼任） |
+
+##### 国务院下属部委
+
+正省部级：教育部、商务部、民政部
+
+正省部级人员：中国人民银行行长、审计署的审计长
+
+其他有正副省部级之分：其他事业单位如商务部、烟草局、国家统计局、证监会等
+
+#### 省
+
+四套班子整省部级：党委（省委书记）、政府（省长）、人大（省人大委员长）、政协（省政协主席）
+
+例外：广东省、新疆省省委书记（副国级的政治局委员兼任）
+
+#### 市
+
+> 直辖市（省级4个）
+>
+> 北京、上海、天津、重庆
+>
+> 市委书记都是副国级的政治局委员兼任
+>
+> （18个政治局委员有6个在地方任职）
+>
+> 地级市（正厅局级300个）
+>
+> 15个（副省级）非常重要，10个省会城市和5个计划单列市
+>
+> 省会：广州、杭州、武汉、成都、西安、济南、南京、沈阳、长春、哈尔滨
+>
+> 计划单列市：深圳、厦门、宁波、青岛、大连
+>
+> 县级市
+>
+> 市长跟县长都是正处级
+>
+> 江苏县级市：江阴、张家港、昆山
+
+#### 香港澳门
+
+省级行政单位，行政长官省长级别
