--- a/_posts/2021-5-12-行测(判断推理).md
+++ b/_posts/2021-5-12-行测(判断推理).md
@@ -21,20 +21,27 @@ title: 行测/判断推理40题
 
 #### 1，图形推理
 
-中心对称图形：一个图形绕某一点旋转180度，旋转后的图形能和原来的图形完全重合
+##### 对称知识点：
 
-轴对称+中心对称：有两条相互垂直的对称轴
+>中心对称图形：一个图形绕某一点旋转180度，旋转后的图形能和原来的图形完全重合
+>
+>轴对称+中心对称：有两条相互垂直的对称轴
 
-错题
+##### 总体规则
 
-```
-1，边与轴重合
-2，开闭性，有没有封闭部分
-3，最短边、最长边
-4，标记点的位置
-```
+> 图形构成相通，考察位置规律
+>
+> 图形构成相似，考察样式规律
+>
+> 图形构成不同，考察属性、数量以及其他特殊规律 
 
-**数量规律**
+##### 1，位置规律
+
+平移、
+
+##### 2，样式规律
+
+##### 3，数量规律
 
 一笔画
 
@@ -71,6 +78,15 @@ title: 行测/判断推理40题
 > 2，顺时针或逆时针编号
 >
 > 3，然后对比选项进行排除
+
+##### 4，错题
+
+```
+1，边与轴重合
+2，开闭性，有没有封闭部分
+3，最短边、最长边
+4，标记点的位置
+```
 
 #### 2，类比关系
 
