--- a/_posts/2021-5-12-行测(判断推理).md
+++ b/_posts/2021-5-12-行测(判断推理).md
@@ -15,17 +15,18 @@ title: 行测/判断推理40题
 4，考虑边的数目，或者内部边的数目
 ```
 
-
-
 ### 判断推理
 
 #### 1，图形推理
 
-##### 对称知识点：
+##### 错题
 
->中心对称图形：一个图形绕某一点旋转180度，旋转后的图形能和原来的图形完全重合
->
->轴对称+中心对称：有两条相互垂直的对称轴
+```
+1，边与轴重合
+2，开闭性，有没有封闭部分
+3，最短边、最长边
+4，标记点的位置
+```
 
 ##### 总体规则
 
@@ -35,23 +36,107 @@ title: 行测/判断推理40题
 >
 > 图形构成不同，考察属性、数量以及其他特殊规律 
 
-##### 1，位置规律
+##### 1，位置规律（元素组成完全相同）
 
-平移、
+平移、旋转（方向角度）、翻转（时针法）
 
-##### 2，样式规律
+若有图1,2,3 考虑完12关系，则32有特定规律。
 
-##### 3，数量规律
+##### 2，样式规律（元素组成相似）
 
-一笔画
+相加、相减、求同、求异
 
+有可能是1,3操作得到2
+
+缺啥补啥
+
+黑白叠加
+
+##### 3，属性规律（元素组成不同）
+
+**对称性**
+
+>中心对称图形：一个图形绕某一点旋转180度，旋转后的图形能和原来的图形完全重合（正着看倒着看一样）
+>
+>轴对称+中心对称：有两条相互垂直的对称轴
+>
+>对称轴：条数，方向
+
+**曲直性**
+
+> 曲、直、曲+直
+
+**开闭性**
+
+> 开放、封闭
+>
+> 即使是既包含封闭又包含开放，也不是考这个点，可能是一笔画
+
+##### 4，数量规律（元素组成不同，点线面素角）
+
+**点**
+
+> 先考虑交点，再考虑直线与曲线的交点（即考虑点是如何形成的），若有特定图形如圆，可以查看圆内外部的交点
+>
+> 曲直交点，曲直+内外
+>
+> 点加粗观察：点在线上，交点等。
+
+**线**
+
+> 1，数直线、曲线
+>
+> 2，直线数+曲线数
+>
+> 3，图形内外（上下，左右等明显的两部分），线数目规律
+
+笔画数
+
+> 图形特征：五角星、月亮、日、田以及日、田的变形，或者含有很多端点
+>
+> 一笔画
+>
 > 1，线条连通
 >
 > 2，奇点为0或2 端点也是奇点
 
-多笔画
-
+> 多笔画
+>
 > 笔画数=奇点数/2 （任何图形奇点数为偶）
+
+**面**
+
+> 封闭区域多优先数面
+>
+> 最大最小面的形状、属性
+
+**素**
+
+> 元素
+>
+> 数元素的个数
+>
+> **个数、种类数、部分数**
+>
+> 例子：“回”字部分数为2
+>
+> 注：生活化的图形往往先考虑部分数
+>
+> 注2：可能会考相邻两幅图的共同元素
+>
+> 注3：个数和种类数相同时，可考虑相同元素的位置关系
+>
+> 注4：以上都不成规律时，进行元素换算，即“1个顶几个”
+
+**角**
+
+> 交叉算四个角
+>
+> 锐角的补交不算角
+>
+> 若角个数不成比例，看锐角
+>
+> 封闭图形，除了数内部角，外部角，还可以内+外角个数
 
 空间重构
 
@@ -79,18 +164,81 @@ title: 行测/判断推理40题
 >
 > 3，然后对比选项进行排除
 
-##### 4，错题
+##### 4，特殊规律
 
-```
-1，边与轴重合
-2，开闭性，有没有封闭部分
-3，最短边、最长边
-4，标记点的位置
-```
+**功能元素**（出现点、箭头、或者小元素）
+
+> 标记最长边，最短边，锐角，相交部分，非相交部分，点在线上还是交点上
+
+**图形间关系**（两个元素或几个封闭空间连在一起）
+
+> 相离、相压、相交（相交于面、点、长边短边）
+>
+> 可以看相交的位置
+>
+> 相交边 一行或一列的数量关系
+>
+> 相交面部分与非相交部分面积大小比较
+
+##### 5，空间重构
+
+> 相对面：同一行列相隔一面，Z字形两端且紧靠竖线，Z字要规则
+>
+> 公共边：展开面上成直角
+>
+> 画边法：顺时针选择一面画边
+
+##### 6，立体拼图、截面图、三视图
+
+> 凹凸一致
+>
+> 三视图注意从任意角度看包括仰视图
 
 #### 2，类比关系
 
-语义关系：褒义，贬义，中性   一般都感情色彩明显
+##### 语义关系
+
+（判断题干词语间逻辑关系：褒贬一致，正反义关系一致）
+
+褒义，贬义，中性   一般都感情色彩明显
+
+近义，反义，比喻义
+
+##### 逻辑关系
+
+全同（一个物体的不同说法）
+
+包含（组成、种属，种属还分具体的特指、泛指）
+
+并列（矛盾非此即彼、反对指多种情况）
+
+交叉（例如男人和老师）
+
+对应（属性有必然属性、或然属性，因果有必然因果和或然因果。例如教师和教室）
+
+##### 语法关系
+
+主谓、动宾、主宾关系
+
+注意各个词语的主体是否一致
+
+##### 积累
+
+```
+八卦：乾、兑、离、震、巽、坎、艮、坤 乾坤属于其二
+九族：高祖、曾祖、祖父、父亲、已审、子、孙、曾孙、玄孙
+五音：宫、商、角、徵zhi、羽
+五行：土、金、木、火、水
+七情：喜、怒、忧、思、悲、恐、惊
+```
+
+二级辨析
+
+```
+当一级的以上关系区分不了时，需要进一步分析，具体从以下几个方面入手：
+1，感情色彩 2，词语结构 3，词性 4，主次关系 5，范畴 6，主要功能与次要功能
+7，必然与或然 8，同一领域
+```
 
 #### 3，定义判断
 
@@ -99,6 +247,14 @@ title: 行测/判断推理40题
 > 主体、客体
 >
 > 留意概念句子的句号位置
+
+做题思路
+
+> 看清提问：正反提问，选不属于的要圈出问题
+>
+> 抓准信息：重点勾画
+>
+> 选项比较：对比择优
 
 #### 4，逻辑判断
 
