--- a/_posts/2092-5-19-新闻记录随笔.md
+++ b/_posts/2092-5-19-新闻记录随笔.md
@@ -58,7 +58,19 @@ author: Rody
 
 叕：表示短或不足
 
-#### 2，成语
+#### 2，俗语
+
+**燕归巢**：燕子回到巢穴，比喻对家乡的思念与眷恋
+
+**破天荒**：盘古开天辟地第一斧，形容从来没有出现过的事。闻所未闻强调没听过，而不一定没出现、没发生
+
+**睁眼瞎**：比喻不识字、没文化、缺乏知识的人=目不识丁
+
+**鸿雁=书信=笺札jiān zhá**
+
+
+
+#### 3，成语
 
 **泽被后世**，zé pī hòu shì，意思是恩惠遍及到后代的人民。 出自《崇高的理想》
 
@@ -104,7 +116,17 @@ author: Rody
 
 **望洋兴叹**：在伟大事物面前感叹自己的渺小，做事力量不足而无可奈何。
 
+**积重难返**：指经过长时间形成的思想作风或习惯很难改变，多指恶习、弊端发展到难以革除的地步
 
+**目无全牛**：形容技艺极其精湛纯熟
+
+**师心自用、固执己见、刚愎自用**：都是固执，自以为是
+
+**不孚众望**：不能使众人信服，与不负众望相反
+
+**穷奢极欲**：极端奢侈，极度享受
+
+**身无长物**：除自身外在没有多余的东西，形容贫穷
 
 ### 三，文言文积累背诵
 
