--- a/_posts/2021-5-12-行测(判断推理).md
+++ b/_posts/2021-5-12-行测(判断推理).md
@@ -232,7 +232,7 @@ title: 行测/判断推理40题
 七情：喜、怒、忧、思、悲、恐、惊
 ```
 
-二级辨析
+##### 二级辨析
 
 ```
 当一级的以上关系区分不了时，需要进一步分析，具体从以下几个方面入手：
@@ -242,13 +242,13 @@ title: 行测/判断推理40题
 
 #### 3，定义判断
 
-识别有效信息
+##### 识别有效信息
 
 > 主体、客体
 >
 > 留意概念句子的句号位置
 
-做题思路
+##### 做题思路
 
 > 看清提问：正反提问，选不属于的要圈出问题
 >
@@ -258,25 +258,79 @@ title: 行测/判断推理40题
 
 #### 4，逻辑判断
 
-**翻译推理**
+##### **翻译推理**
+
+思路：先翻译，后推理
 
 > 规则1：前推后
 >
-> 如果/就/都/一定
+> 如果...就/都/一定/那么
+>
+> 只要...就
+>
+> 所有...都...
+>
+> ...是...的充分条件（充分条件在前）
+>
+> 
 >
 > 规则2：后推前
 >
-> 只有才，不...不...
+> 只有...才
 >
-> B推A：除非A否则不B
+> ...才
 >
-> -B推A：除非A否则B
+> **不...不...**
+>
+> ...是...的必要条件/前提（必要条件在后）
+>
+> **B推A**：除非/必须/如果不A否则不B
+>
+> **-B推A**：除非A否则B
 >
 > 谁必不可少，谁在箭头后
+>
+> 如：善治的前提是良法：良法不可少，则是前推后
+>
+> 如：推进依法治国进程中，大力宣传法制**必不可少**：依法治国->宣传法制
+>
+> 
+>
+> 且：“和”，“而且”，逗号、顿号等
+>
+> 或：或者我喜欢静静，或者我喜欢明明 —> 喜欢静静并（或）喜欢明明=1  至少喜欢一个
+>
+> 或者描述的对象，至少一个成立。
+>
+> 德摩根定律：且、或整体的非
+>
+> 
+>
+> “有的”可能包括所有，翻译时带上有的，逆否时有的依然放前面不动
+>
+> 规则：（文字游戏，绕而已）
+>
+> 有的1是2=有的2是1
+>
+> 有的1不是2=有的不是2的是1
+>
+> 所有1是2—>有的2是1
+>
+> 
+>
+> “并非”=否定
+>
+> 并非出现，后面全部否：必然换可能，有的换所有，且或互换，最后谓语动词否定
+>
+> 注意：必然=一定；未必=不必然
+>
+> 例子：他人的快乐，未必是自己的快乐
+>
+> 翻译：他人的快乐，不必然是自己的快乐=他人的快乐，可能不是自己的快乐
 
-**组合排列**
+##### **组合排列**
 
-> 题干明确用排除，题干不确定用代入
+> 排除代入法：题干明确用排除，题干不确定（真假未知）用代入
 >
 > 最大信息法：出现次数最多
 >
@@ -284,9 +338,9 @@ title: 行测/判断推理40题
 >
 > 321结构：先看3，再看1，最后看2
 
-**逻辑论证**
+##### **逻辑论证**
 
-论证论点与论据之间的关系
+**论证论点与论据之间的关系**
 
 注意：转折词、限定词
 
@@ -320,6 +374,25 @@ title: 行测/判断推理40题
 >
 > 走投无路的时候，否哪是哪，找否定答案
 
+例子：
+
+> 论点：有1就有2
+>
+> 削弱方式1：否论点，有1同时没有2
+>
+> 削弱方式2：拆桥，没有1同时有2
+>
+> 方式1比方式2削弱力度强
+
+正确答案特点
+
+```
+1，谁直接明确，优选谁
+2，建议类慎选
+3，必然强于可能
+4，论点是比较的形式，加强或削弱的答案也是比较的形式
+```
+
 一般错误选项类型
 
 > 1，跑题
@@ -329,6 +402,8 @@ title: 行测/判断推理40题
 > 3，对策类
 >
 > 4，副作用
+>
+> 5，具有敏感词：绝对化的词（一定、肯定、必须等），比较性的词（更、越来越、比）、程度性的词（主要等）
 
 加强论据
 
@@ -336,10 +411,65 @@ title: 行测/判断推理40题
 >
 >解释>例子
 >
->类比不选
+>类比不选， 类比只是可能性的联系
 
 搭桥
 
-> 必要条件（没它不行）
+> 必要条件（没它不行，使论点论据可以被利用）
 >
 > 搭桥/必要条件>解释原因>举例子
+>
+> 如果两个选项都是搭桥，但顺序不同
+>
+> 论据：1—>2  论点：1—>3 搭桥：2—>3
+>
+> 论据：1—>2  论点：3—>2 搭桥：3—>1
+>
+> (总体思路是，使得论点中的联系成立)
+
+真假推理
+
+> 矛盾关系（一真一假）
+>
+> **A—>B 的否定是 A且-B**
+>
+> 即
+>
+> **A—>B 等价于-A或B**
+>
+> 例如：如果晴天，那么去郊游 
+>
+> 否定：晴天，但没去郊游
+>
+> 反对关系（必有一真）
+>
+> 有的存在  
+>
+> 反对：有的不存在
+>
+> 多个条件推导：
+>
+> 一真前假，一假后真
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
