--- a/_posts/2092-9-7-面试(经验总结) .md
+++ b/_posts/2092-9-7-面试(经验总结) .md
@@ -8,6 +8,15 @@ author: Rody
 
 面试是一个自我修炼的过程
 
+```
+去年都匀：82.2分
+去年贵阳市委办公厅：90 88.8 83.6
+去年贵阳市人民政府办公厅：85.2 83.6
+杨倩茹：88.4
+```
+
+
+
 ### 一、面试素材
 
 #### 1，活动类型列举
@@ -27,8 +36,60 @@ author: Rody
 >5，各地通过市**县委书记讲党课、政治轮训、理论专题讲座**等形式，结合**党史学习教育**
 >
 >6，各地政法机关通过**组织旁听庭审**、**开设实景课堂**等形式，教育广大干警知敬畏、存戒惧、守底线
->
->7，
+
+### 二、声音练习
+
+#### 1，唇部训练
+
+撅唇：上下左右（四个八拍）
+
+饶唇：顺逆各6次
+
+#### 2，舌头训练 
+
+顶舌：上下左右（顺逆各八次）
+
+弹舌：放松舌头肌肉
+
+#### 3，提打挺松
+
+提颧肌：嘴角向上张嘴（咧嘴笑12次）脸部两侧
+
+打牙关：口腔打到最大
+
+挺软腭：打呵欠到一半收，使软腭挺起
+
+#### 4，字音饱满度
+
+问题：韵母没有展开，需要打开口腔
+
+训练方法：a的音，舌头往下压，适当牙关开合度，软腭挺起，颧肌挺起
+
+#### 5，气息运用
+
+气息少：挤嗓子，尖锐感
+
+气息多：
+
+气息感受训练：腹式呼吸，注意力在肚子肉上面，肩膀不晃动，闻花香的感觉
+
+抬头坐直，气息畅通
+
+慢吸慢呼：
+
+慢吸发si：
+
+慢吸发长a：嗓子放松
+
+气泡音：放松嗓子，不挤嗓子
+
+例子：窗台，开车，排课，偏科，拆开，乘客，前排，佩奇，彩排，窗台
+
+诗例：床前明月光，疑是地上霜；举头望明月，低头思故乡
+
+春眠不觉晓，处处闻啼鸟；夜来风雨声，花落知多少。
+
+烟笼寒水月笼沙，夜泊秦淮近酒家；商女不知亡国恨，隔江犹唱后庭花
 
 
 
