--- a/_posts/2021-7-12-就业.md
+++ b/_posts/2021-7-12-就业.md
@@ -4,17 +4,71 @@ author: Rody
 title: 博学从书
 ---
 
-## 工作
-
 ## 立业
+
+```
+父母信息 
+父亲 罗绍英 50 18885409973 贵州省罗甸县平岩中心校 教师
+母亲 黄秀兰 51 无 无 无
+
+2010.09—2013.06  在贵州省贵阳市市清华中学读高中；
+2013.09—2017.06  在西安电子科技大学通信工程专业读本科；
+2018.09—2022.06  在中国科学技术大学软件工程专业读硕士研究生
+
+擅长篮球，喜欢跑步，研究做菜
+
+• 2013-2014 学年西安电子科技大学 西电“星火杯”科技大赛二等奖 2013.11
+• 2015-2016 学年西安电子科技大学 西电文献综述大赛三等奖 2015.10
+• 2015-2016 学年西安电子科技大学 青年励志奖学金 2016.4
+• 2018-2019 学年中国科学技术大学 优秀共青团员 2019.5
+
+入党时间：2019.5.14
+
+```
+
+
 
 ### 一，定向选调
 
-#### 1，四川（第一批）
+#### 1，贵州
+
+1，省考题
+
+2，政府工作报告
+
+3，人民锐评
+
+```
+关孟达，徐佳奕，高铭振，彭志磊，李广辉，汪松
+```
+
+##### 岗位
+
+```
+贵阳市人民政府办公厅
+人数：2
+学历：研究生、博士
+专业：不限
+限制：党员
+10限制学校：北京大学、清华大学、中国人民大学、浙江大学、复旦大学、南京大学、厦门大学、华中科技大学、中国科技大学、上海交通大学
+电话：0851-87988261
+```
+
+##### 厦大
+
+```
+
+```
+
+
+
+#### 2，四川（第一批）
 
 > 10.16   2.5小时
 >
 > 面试10.30 到 31
+
+
 
 
 
