--- a/_posts/2021-5-14-申论(题型笔记1).md
+++ b/_posts/2021-5-14-申论(题型笔记1).md
@@ -177,11 +177,17 @@ author: Rody
 
 #### （2）题型
 
-1，基本：关于+主要内容（主体）+文种
+1，基本标题
 
-2，命题：以...为题
+**发文机关+关于+主要内容（主体）+文种**
 
-3，自拟标题：短文，短评，报道，新闻稿等有文种要求的文种
+**关于+发文事由+文种**，太长的时候发文机关可以省略
+
+命题：以...为题
+
+**自拟标题**：短文，短评，报道，新闻稿，部分宣传稿，评论员文章等有文种要求的文种
+
+要求：表达形象生动
 
 ```
 称谓：题干给定受众（写给谁）
@@ -190,15 +196,21 @@ author: Rody
 基本：材料开头“总”抄材料开头，不能抄时（无要点分，尽量写少些）
 ```
 
-背景式：结合题干和材料，引下文
+发文对象：可以是群众、单位、社会组织，材料没有给定的时候不写
+
+4，开头
+
+背景式：政治、社会背景，问题、影响、目的+过渡段引下文
 
 目的式：“为了/为”，直接引出下文
 
-主体：要点集中营（要点分），抄要点即可
+分数占比不高，控制字数（50-75字；100-150字）
+
+5，主体：要点集中营（要点分），抄要点即可
 
 结尾：材料结尾是总结，抄材料的总结
 
-### 五，申发论述
+### 五，申发论述（1000字）
 
 材料分析：核心词句段，篇章整合
 
