--- a/_posts/2021-5-14-申论(题型笔记2) .md
+++ b/_posts/2021-5-14-申论(题型笔记2) .md
@@ -6,6 +6,8 @@ author: Rody
 
 李梦圆申论王者
 
+整体要求：1精讲，2专题—>套题，3阅读习惯
+
 ### 一，申论基础
 
 1，要素：问题、影响（危害、意义）、对策等
@@ -120,15 +122,242 @@ author: Rody
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/公文.jpg)
 
+#### 三，具体类别
 
+##### 1，方案类
 
-### 五，申发论述（1000字）
+侧重：对策、建议、具体做法
 
+典型：指导意见、建议、活动方案等
 
+思路：
 
+> 标题：关于+事由+的+文种
+>
+> 有主送机关
+>
+> 开头：交代缘由（背景、根据、目的、意义、问题等）
+>
+> 主体：具体解决问题的对策
+>
+> 结尾
+>
+> 发文机关署名
+>
+> 日期：xxxx年xx月xx日
 
+##### 2，宣传类
 
+识别：通过说服、劝解、号召、宣传等转变认知、看法，增长知识倡导的行动或措施。
 
+典型：公开信，倡议书，宣传稿
+
+思路
+
+>标题：关于+事由+的+文种
+>
+>有主送机关
+>
+>开头：介绍情况（背景、根据）
+>
+>主体：劝服（问题、危害、意义等）+倡议（对策）
+>
+>结尾：呼吁号召
+>
+>发文机关署名
+>
+>日期：xxxx年xx月xx日
+
+##### 3，总结类
+
+识别：把具体情况告知或汇报给某个对象
+
+典型：汇报、提纲、讲话稿、发言稿、调查报告等
+
+思路
+
+>标题：关于+事由+的+文种
+>
+>有主送机关
+>
+>开头：引出主题（背景、根据、目的等）
+>
+>主体：总结与主题相关要素（问题、危害、意义、对策等）
+>
+>结尾
+>
+>发文机关署名
+>
+>日期：xxxx年xx月xx日
+
+##### 4，评论类
+
+识别：对某些现象、观点进行评价
+
+典型：时评、评论文等
+
+思路
+
+> 标题：自拟
+>
+> 主体：评析论证（根据题目倾向确定内容，结合资料丰富完善）
+>
+> 结尾：对策、升华等
+
+##### 公文总结
+
+![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/公文总结.jpg)
+
+### 五，文章写作（1000字~1200字）
+
+#### 一、高分技巧
+
+> 1，观点：准确，全面，明显，价值观正确
+>
+> 2，贴切丰富：材料之内的要改变表述，多用新闻热点，领导人讲话，名人名言与典故
+>
+> 3，结构：清晰，完整，自然
+>
+> 4，语言：流畅，自然，多用短句，有风格（文采）
+
+#### 二、主题与观点
+
+1，主体与观点
+
+找准主题，可以从阐释含义，分析原因或意义、危害，提出对策等角度切入
+
+2，类型
+
+类型一：题干直接给出
+
+类型二：递进式
+
+> 三四个小标题：是什么，为什么，怎么办
+>
+> 例子：关系类 AB类
+>
+> 结构：A是什么，B是什么；A与B的关系；AB依靠
+>
+> 例子：快与慢
+>
+> 结构：快是，慢是，快慢关系；关系处理的好不好（好：意义；坏：危害）；怎么更好地处理
+
+题型三：哲理式
+
+> 处处都是重点
+>
+> 例子：不学礼，无以立
+>
+> 结构：礼含义，是什么；为什么；怎么去实现
+
+3，梳理资料挖掘观点
+
+优先阅读：指定资料、小题未涉及资料、权威材料
+
+关照全篇：小题提示（题干、答案）、全部给定资料
+
+#### 三、作文结构
+
+总体思路（6~8段，避免模板化）
+
+##### 1，凤头（直白，有吸引力）
+
+引出观点
+
+```
+可以1段
+可以2段：长—>短（观点）；短—>长
+```
+
+`标题`
+
+```
+**常规型
+例子：全民守法是建设法治国家的基础（根本，关键，前提，核心）->压舱石
+**比喻型
+例子：绘好科技创新的“工笔画”
+**警醒式
+多从官方媒体积累
+例子：莫让“丧文化”伤了孩子
+**对称式
+适合两个主题词
+例子：身在急时代 心享慢生活       资源共享 文明共担
+**主副式
+格式：各占一行
+```
+
+好词
+
+> 涵养、托起、兜底、共话、打造、筑牢
+
+`如何写好开头`
+
+> （1）释义式
+>
+> 重复+解释+观点
+>
+> 背景+（反问）+阐释+观点
+>
+> （2）评论式
+>
+> 过渡到观点句：对此，我深感赞同
+>
+> （3）总结式
+
+##### 2，猪肚（素材，多放前三段）
+
+`分论点`
+
+```
+3段意义+1段对策+1结尾
+1段意义+3段对策+1结尾
+2段意义+2段对策+1结尾
+
+也可以：过渡段
+任意位置放，找出自己喜欢的形式
+```
+
+`思路`
+
+**论证1**=观点+阐释+举例（排比）+分析、引言+总结回扣（简要对策）
+
+排比例子：从...到...再到...他们...不仅...，而且...。...只有...，方能...。
+
+**论证2**=观点+阐释+名言
+
+`内容偏好`
+
+**善用**冒号、省略号、顿号、引号、书名号、省略号
+
+论据用描述细节，多整齐短句
+
+事实论据：社会热点、经典故事、数据、调查报告、新闻报道
+
+理论论据：名人名言、俗语俚语、领导人讲话、理论政策、客观规律、科学原理、论著文章。
+
+**考官喜欢**：（习式俗语）、古语、俗语、西方哲语
+
+积累可以根据五位一体来积累
+
+##### 3，豹尾（100-150字）
+
+`总结式`
+
+用名言，拥有通用性万能名言，分析做法，才能...
+
+最后升华，政策理论性的
+
+例：凡事预则立，不预则废
+
+`展望式`
+
+内容升华，情感升华
+
+例如：我们有理由相信...
+
+`呼吁式`
+
+希冀
 
 
 
