--- a/_posts/2021-5-14-申论(题型笔记2) .md
+++ b/_posts/2021-5-14-申论(题型笔记2) .md
@@ -8,6 +8,22 @@ author: Rody
 
 整体要求：1精讲，2专题—>套题，3阅读习惯
 
+```
+自我答题感受：
+1，能用原词用原词，不要过多加工；
+2，精要概括时，例子可以不列出，措施的修饰语句可以不列出，原文效果可以给出；
+3，话语可以略看，然后看总结句；
+4，所有题型的答题内容，句式基本都相通，都有常规的句式特点。例如：小短句、顿号等，短句至少四字，不然顿号连接两三字句；
+5，例子较多，可以用“各项”来代替；
+```
+
+```
+问题：
+1，发言提纲需要称谓、落款么
+```
+
+
+
 ### 一，申论基础
 
 1，要素：问题、影响（危害、意义）、对策等
