--- a/_posts/2021-5-14-申论(题型笔记2) .md
+++ b/_posts/2021-5-14-申论(题型笔记2) .md
@@ -6,6 +6,8 @@ author: Rody
 
 李梦圆申论王者
 
+### 重：经验记录
+
 整体要求：1精讲，2专题—>套题，3阅读习惯
 
 ```
@@ -15,11 +17,49 @@ author: Rody
 3，话语可以略看，然后看总结句；
 4，所有题型的答题内容，句式基本都相通，都有常规的句式特点。例如：小短句、顿号等，短句至少四字，不然顿号连接两三字句；
 5，例子较多，可以用“各项”来代替；
-```
 
 ```
-问题：
-1，发言提纲需要称谓、落款么
+
+申论的规矩心得
+
+```
+1，写原因时，一般是名词+否定。如果是（主）谓宾句式，动词在前；如果是主（系）表句式，形容词在后。
+2，写意义时，如果是重要政策的意义，意义不能太口语化，如“节省了...时间和精力”需改为“为...提供便利”，太具体的需要总结引申得出，但是不能过度引申，需要达到意义语句比较符合动宾标准。
+3，写问题时，如果主体区分得不是很明显，不能按照主体来描述问题。小标题要精炼总结好，如果有原词可以用原词，例如一些修饰性短语“空头招商”等，要一眼便知含义；具体要依据内容而定，看能否准确区别于其他小标题，并且反应题目的问题；典型问题需要列出。
+4，具体存在的问题要列举，最好就用原词，“优惠大”应该写成“提供优惠政策”。同时，在总结问题时，尽量不使用文章中的俗语。
+5，写影响时，善用“促进、提升、降低、开创、助力”等词语
+6，写原因时，若写一个人成功的原因，一些背景的细致描写不需要推出个人的特点和经验。
+7，综合题：释义并表态+分析相关要素（一般是问题、意义）+总结评价（一般是对策）
+释义并表态：可以直接陈述语句相关的材料实事，有些不必过多解释字词。 相关要素也可以分点
+
+```
+
+问题
+
+```
+1，发言提纲需要称谓、落款么   （遇到不需要的）
+```
+
+### 二，属于摘抄
+
+#### 1，农村发展
+
+```
+1，融合发展，促进产业融合
+2，成立专业合作社
+3，强化服务（技术服务，生产服务）
+4，打造品牌，提高市场竞争力
+5，拓宽销售渠道
+```
+
+#### 2，活动举办
+
+```
+1，内容丰富，形式多样
+2，政府重视，政策保障
+3，方案严密，组织性强
+4，实践性强
+5，价值导向，提升道德
 ```
 
 
