--- a/_posts/2021-5-14-申论(题型笔记2).md
+++ b/_posts/2021-5-14-申论(题型笔记2).md
@@ -1,44 +1,95 @@
 ---
-layout: post
+/layout: post
 title: 申论/做题笔记2-李梦圆
 author: Rody
 ---
 
 李梦圆申论王者
 
-### 重：经验记录
+### 一，经验记录 
 
 整体要求：1精讲，2专题—>套题，3阅读习惯
 
-```
-自我答题感受：
-1，能用原词用原词，不要过多加工；
-2，精要概括时，例子可以不列出，措施的修饰语句可以不列出，原文效果可以给出；
-3，话语可以略看，然后看总结句；
-4，所有题型的答题内容，句式基本都相通，都有常规的句式特点。例如：小短句、顿号等，短句至少四字，不然顿号连接两三字句；
-5，例子较多，可以用“各项”来代替；
+查看勾画材料时：标记背景（公文题有用）、意义、问题、对策
+
+`单一题`
+
+>1，写原因时，一般是名词+否定。如果是（主）谓宾句式，动词在前；如果是主（系）表句式，形容词在后
+>2，写意义时，如果是重要政策的意义，意义不能太口语化，如“节省了...时间和精力”需改为“为...提供便利”，太具体的需要总结引申得出，但是不能过度引申，需要达到意义语句比较符合动宾标准
+>3，写问题时，如果主体区分得不是很明显，不能按照主体来描述问题。小标题要精炼总结好，如果有原词可以用原词，例如一些修饰性短语“空头招商”等，要一眼便知含义；具体要依据内容而定，看能否准确区别于其他小标题，并且反应题目的问题；典型问题需要列出
+>4，具体存在的问题要列举，最好就用原词，“优惠大”应该写成“提供优惠政策”。同时，在总结问题时，尽量不使用文章中的俗语
+>5，写影响时，善用“促进、提升、降低、开创、助力”等词语
+>6，写原因时，若写一个人成功的原因，一些背景的细致描写不需要推出个人的特点和经验。
+>
+>7，写对策时：有些否定的句子，“不”字开头换成同样否定含义的词语，如拒绝、摒弃等
+>8，写要点时：尽量用原文里的原词，要点的关键原词
+>9，能用原词用原词，不要过多加工
+>10，精要概括时，例子可以不列出，措施的修饰语句可以不列出，原文效果可以给出
+>11，话语可以略看，然后看总结句
+>12，所有题型的答题内容，句式基本都相通，都有常规的句式特点。例如：小短句、顿号等，短句至少四字，不然顿号连接两三字句
+>13，例子较多，可以用“各项”来代替；也可以举两个+等等
+
+`综合题`
+
+>1，释义并表态+分析相关要素（一般是问题、意义）+总结评价（一般是对策）
+>释义并表态：可以直接陈述语句相关的材料实事，有些不必过多解释字词。 相关要素也可以分点
+>
+>2，综合题中，不用太多注意部分之间的连接词语，注意看需要分条部分是意义还是对策，直接列出条目
+
+`公文题`
+
+>1，发言提纲、内容提纲（标题+内容）
+>
+>需要称谓、落款么   （不需要）
+>
+>=经验交流材料
+>
+>关于倡议书的内容提纲：直接写标题+正文，无称谓、无署名、无其他特殊格式；其实就是直接按照倡议书的格式以及内容来写。
+>
+>提纲的理解：不注重形式，写标题+正文+结尾（有时候可省略不写）
+>
+>2，新闻稿需要有开头：“本网讯 近日走访、近日等话语”，实例的描写需要有总结语，不需要标记序号；还是总分总结构
+>
+>3，发言稿 （标题+称谓+内容）
+>
+>标题需要标准格式“关于...的发言稿”，一般是标题、称谓、正文
+>
+>发言稿如果材料有部分背景意义介绍，可以在发言稿内容一开始就：大家好！+背景总结陈述（重点词语意义、重点作用释义需要加到前面），首段末位有常用语衔接
+>
+>4，部分背景的内容，如果是事关问题主体，也可以用做法、经验的方式给出介绍
+>
+>5，日常公文：宣传稿、公开信、讲话稿可以自拟题目，也可以参照格式写
+>
+>6，总结类公文中，尽量多写与主题词有关的关键词，尽量多写多得分
+
+`大作文`
+
+> 1，论点一定要清晰，形象
+>
+> 2，论点论证段的内容，总结部分的对策可以使用材料里的具体、可行性高的对策，并以效果句收尾
+>
+> 3，论证结构1：论点+论据、问题+分析+对策结论
 
 ```
-
-申论的规矩心得
-
-```
-1，写原因时，一般是名词+否定。如果是（主）谓宾句式，动词在前；如果是主（系）表句式，形容词在后。
-2，写意义时，如果是重要政策的意义，意义不能太口语化，如“节省了...时间和精力”需改为“为...提供便利”，太具体的需要总结引申得出，但是不能过度引申，需要达到意义语句比较符合动宾标准。
-3，写问题时，如果主体区分得不是很明显，不能按照主体来描述问题。小标题要精炼总结好，如果有原词可以用原词，例如一些修饰性短语“空头招商”等，要一眼便知含义；具体要依据内容而定，看能否准确区别于其他小标题，并且反应题目的问题；典型问题需要列出。
-4，具体存在的问题要列举，最好就用原词，“优惠大”应该写成“提供优惠政策”。同时，在总结问题时，尽量不使用文章中的俗语。
-5，写影响时，善用“促进、提升、降低、开创、助力”等词语
-6，写原因时，若写一个人成功的原因，一些背景的细致描写不需要推出个人的特点和经验。
-7，综合题：释义并表态+分析相关要素（一般是问题、意义）+总结评价（一般是对策）
-释义并表态：可以直接陈述语句相关的材料实事，有些不必过多解释字词。 相关要素也可以分点
-
+衔接语
+1，当。。。
+2，因此，。。。
+3，但是，。。。
+4，须知，。。。要知道，。。。
+5，可以说，。。。
+6，在这个过程中，。。。
+7，为了。。。
+8，
 ```
 
-问题
+```
+关联词
+1，不是。。。而是。。。并。。。
+2，从。。。到。。。再到。。。
+3，既要。。。又要。。。同时。。。进而。。。
+```
 
-```
-1，发言提纲需要称谓、落款么   （遇到不需要的）
-```
+
 
 ### 二，属于摘抄
 
@@ -64,7 +115,7 @@ author: Rody
 
 
 
-### 一，申论基础
+### 三，申论基础
 
 1，要素：问题、影响（危害、意义）、对策等
 
@@ -94,7 +145,7 @@ author: Rody
 >
 > 2，分类整理
 
-### 二，单一题
+### 四，单一题
 
 #### 一、问题
 
@@ -136,9 +187,11 @@ author: Rody
 
 分类：把每一段最大的词提到总结词
 
-### 三，综合题
+### 五，综合题
 
 #### 一、基本方法
+
+基本框架：释义+分析相关要素+总结评价
 
 ```
 1，释义：就近找总结，就近找观点，简要表达即可，实在没有结合上下文自己总结
@@ -146,7 +199,11 @@ author: Rody
 3，简要对策：总结作用，有就直接摘抄，没有可以不写或简单推导
 ```
 
-### 四，公文题
+相关要素多的话，看主要是意义还是对策。核心部分的相关要素要区分分条
+
+### 六，公文题
+
+实质内容：问题、危害、意义、对策等要素的排列组合，不需要大量补充资料以外的内容
 
 #### 一，阅卷要求
 
@@ -182,9 +239,9 @@ author: Rody
 
 ##### 1，方案类
 
-侧重：对策、建议、具体做法
+**侧重**：对策、建议、具体做法
 
-典型：指导意见、建议、活动方案等
+**典型**：指导意见、建议、活动方案等
 
 思路：
 
@@ -192,21 +249,23 @@ author: Rody
 >
 > 有主送机关
 >
-> 开头：交代缘由（背景、根据、目的、意义、问题等）
+> ​     开头：交代缘由（背景、根据、目的、意义、问题等）
 >
-> 主体：具体解决问题的对策
+> ​     主体：具体解决问题的对策
 >
-> 结尾
+> ​     结尾：强调重要性，提出要求（字数不允许可以省略）
 >
-> 发文机关署名
+> ​                                                   发文机关署名
 >
-> 日期：xxxx年xx月xx日
+> ​                                           日期：2021年xx月xx日
+
+活动方案：活动主题+活动目的+活动的具体方式+活动流程
 
 ##### 2，宣传类
 
-识别：通过说服、劝解、号召、宣传等转变认知、看法，增长知识倡导的行动或措施。
+**识别**：通过说服、劝解、号召、宣传等转变认知、看法，增长知识倡导的行动或措施。
 
-典型：公开信，倡议书，宣传稿
+**典型**：公开信，倡议书，宣传稿（题目也可以自拟）
 
 思路
 
@@ -214,15 +273,15 @@ author: Rody
 >
 >有主送机关
 >
->开头：介绍情况（背景、根据）
+>​     开头：介绍情况（背景、目的）
 >
->主体：劝服（问题、危害、意义等）+倡议（对策）
+>​     主体：劝服（问题、危害、意义等）+倡议（对策）
 >
->结尾：呼吁号召
+>​     结尾：呼吁号召
 >
->发文机关署名
+>​                                             发文机关署名
 >
->日期：xxxx年xx月xx日
+>​                                     日期：xxxx年xx月xx日
 
 ##### 3，总结类
 
@@ -230,7 +289,7 @@ author: Rody
 
 典型：汇报、提纲、讲话稿、发言稿、调查报告等
 
-思路
+思路：对资料里的已有要素进行概括，有什么就写什么，如果相关要素在资料中没有涉及，不需要反推，如对策等。更多地是对抄总结句，根据事例总结其对策（做法）等。
 
 >标题：关于+事由+的+文种
 >
@@ -264,7 +323,7 @@ author: Rody
 
 ![](https://github.com/rodyyyy/rodyyyy.github.io/raw/master/images/公文总结.jpg)
 
-### 五，文章写作（1000字~1200字）
+### 七，文章写作（1000字~1200字）
 
 #### 一、高分技巧
 
