--- a/_posts/2092-5-19-新闻记录随笔.md
+++ b/_posts/2092-5-19-新闻记录随笔.md
@@ -58,6 +58,8 @@ author: Rody
 
 叕：表示短或不足
 
+
+
 #### 2，俗语
 
 **燕归巢**：燕子回到巢穴，比喻对家乡的思念与眷恋
@@ -129,6 +131,8 @@ author: Rody
 **身无长物**：除自身外在没有多余的东西，形容贫穷
 
 **顽瘴痼疾**：zhàng gù jí 指经久难治愈的病
+
+**如椽巨笔**：chuán 像椽子一般粗大巨大的笔。比喻记录大事的手笔，也比喻笔力雄健的文词。
 
 ### 三，文言文积累背诵
 
