--- a/_posts/2092-5-19-申论(素材积累).md
+++ b/_posts/2092-5-19-申论(素材积累).md
@@ -286,6 +286,22 @@ author: Rody
 
 中华优秀传统文化激发中国共产党的活力
 
+#### （2）实例短句
+
+> 无论是张骞通西域，还是郑和下西洋
+>
+> 上个世纪，鲁迅先生以一篇《拿来主义》为中外文化交流做出了指引
+>
+> 改革开放以来，无论是昔日接头的“韩风日风”，还是今日网上的“韩剧美剧”
+>
+> 海明威说过，在这个世界上，你永远不可能成为一个孤岛。
+>
+> 习总书记深刻指出，“国家之魂，文以化之，文以铸之”
+>
+> 中国文化恰似长河，昼夜奔腾、源远流长。
+>
+> 习总书记强调：“中华优秀传统文化是中华民族的精神命脉，是涵养社会主义核心价值观的重要源泉，也是我们在世界文化激荡中站稳脚跟的坚实根基。”
+
 #### 5，生态文明方面
 
 ##### （1）标题1
