--- a/_posts/2099-5-14-申论(题型笔记2).md
+++ b/_posts/2099-5-14-申论(题型笔记2).md
@@ -69,6 +69,10 @@ author: Rody
 > 2，论点论证段的内容，总结部分的对策可以使用材料里的具体、可行性高的对策，并以效果句收尾
 >
 > 3，论证结构1：论点+论据、问题+分析+对策结论
+>
+> 4，短评的题目一般要包括主题词，开头首段需要有相关介绍、给出对于主题词的看法等，具体为背景+观点
+>
+> 
 
 ```
 衔接语
@@ -318,6 +322,8 @@ author: Rody
 > 主体：评析论证（根据题目倾向确定内容，结合资料丰富完善）
 >
 > 结尾：对策、升华等
+
+评论类的特点是
 
 ##### 公文总结
 
