--- a/_posts/2099-5-14-申论(题型笔记0).md
+++ b/_posts/2099-5-14-申论(题型笔记0).md
@@ -224,7 +224,21 @@ supreme
 >
 > 把xx做实做好，担起xx主体责任，迈好xx坚实的一步，xx是xx的基础
 >
+> ```
+> 以xxx推进xxx
+> xx需要xx
+> xx要夯实xx基础
+> xx为xx带来机遇
+> xx让xx
+> ```
+>
 > 2，比喻式标题
+>
+> ```
+> 传统文化是拯救道德危机的一剂良药
+> 以互联网思维解答社会治理新考题
+> 提升公民科学素养更需教育筑底
+> ```
 >
 > 3，惊醒式标题
 >
