--- a/_posts/2099-5-14-申论(题型笔记2).md
+++ b/_posts/2099-5-14-申论(题型笔记2).md
@@ -28,6 +28,8 @@ author: Rody
 >11，话语可以略看，然后看总结句
 >12，所有题型的答题内容，句式基本都相通，都有常规的句式特点。例如：小短句、顿号等，短句至少四字，不然顿号连接两三字句
 >13，例子较多，可以用“各项”来代替；也可以举两个+等等
+>
+>14，总结要点时，如果感觉是一个大要点，不能自己过多省略简写、过多意想增加
 
 `综合题`
 
@@ -61,6 +63,8 @@ author: Rody
 >5，日常公文：宣传稿、公开信、讲话稿可以自拟题目，也可以参照格式写
 >
 >6，总结类公文中，尽量多写与主题词有关的关键词，尽量多写多得分
+>
+>7，短评的题目一般要包括主题词，开头首段需要有相关介绍、给出对于主题词的看法等，具体为背景+观点
 
 `大作文`
 
@@ -70,20 +74,27 @@ author: Rody
 >
 > 3，论证结构1：论点+论据、问题+分析+对策结论
 >
-> 4，短评的题目一般要包括主题词，开头首段需要有相关介绍、给出对于主题词的看法等，具体为背景+观点
->
-> 
+> 4，
 
 ```
 衔接语
-1，当。。。
-2，因此，。。。
-3，但是，。。。
-4，须知，。。。要知道，。。。
-5，可以说，。。。
-6，在这个过程中，。。。
-7，为了。。。
-8，
+1，当。。。（事例）
+2，因此，。。。（结论）
+3，但是，。。。（问题）
+4，须知，。。。= 要知道，。。。（分析）
+5，可以说，。。。（总结）
+6，在这个过程中，。。。（分析）
+7，为了。。。（事例or分析）
+8，正是。。。（事例）
+9，如今，。。。（事例）
+10，实践证明，。。。（结论）
+11，在。。。层面；在。。。中；在。。。上（事例）
+12，。。。就是。。。（事例）
+13，（原因语句），催生了。。。（事例）
+14，于。。。而言（总结、分析）
+15，比如，。。。（事例）
+16，这就要求。。。；这就说明。。。（分析、结论）
+17，（对比论证）两相对比，。。。（分析）
 ```
 
 ```
@@ -91,6 +102,11 @@ author: Rody
 1，不是。。。而是。。。并。。。
 2，从。。。到。。。再到。。。
 3，既要。。。又要。。。同时。。。进而。。。
+```
+
+```
+大作文如果丰富
+
 ```
 
 
@@ -428,6 +444,40 @@ author: Rody
 ##### 2，猪肚（素材，多放前三段）
 
 `分论点`
+
+> 论点写法
+>
+> 1，内涵作为观点。
+>
+> 例子：**所谓**敬德，是要懂得传统文化，学习道德知识，还要。。。更要。。。
+>
+> 2，原因作为观点
+>
+> 例子：一直蓬勃发展的浙江在xx领域**之所以**麻烦不断，是因为外部环境。。。
+>
+> 3，意义作为观点
+>
+> 例子：走出自己的小世界，与他人交流，向未知和可能进军，能开阔视野，提升人生境界
+>
+> 4，对策作为观点
+>
+> 执法者，要树立服务意识，不仅要践行群众路线，还要创新执法方式，满足群众多样化、个性化的需求
+>
+> 论点要求
+>
+> 1，文章话题与论点紧密联系
+>
+> 2，表达上力求突破
+>
+> 对论点的内容进行丰富、对论点的表达形式进行创新、例如：将观点部分的关键词又抽象变得具体，通过范文、社会的形式来加强语境。
+>
+> 论证写法
+>
+> 1，优先使用资料中的事例
+>
+> 2，事例要精简，语言要精炼，内容要简短
+>
+> 3，善用对比论证。
 
 ```
 3段意义+1段对策+1结尾
