--- a/_posts/2099-5-14-申论(题型笔记2).md
+++ b/_posts/2099-5-14-申论(题型笔记2).md
@@ -100,14 +100,14 @@ author: Rody
 ```
 关联词
 1，不是。。。而是。。。并。。。
-2，从。。。到。。。再到。。。
+2，从。。。到。。。再到。。。（举例）
 3，既要。。。又要。。。同时。。。进而。。。
+4，无论是。。。还是。。。都能。。。（论证段尾句）
+5，只有。。。才能。。。；只有。。。才能。。。（结尾第二句）
+6，越是。。。越能。。。；越是。。。越能。。。（第二段当前问题后，论点前）
 ```
 
-```
-大作文如果丰富
 
-```
 
 
 
