--- a/_posts/2092-5-19-新闻记录随笔.md
+++ b/_posts/2092-5-19-新闻记录随笔.md
@@ -134,6 +134,12 @@ author: Rody
 
 **如椽巨笔**：chuán 像椽子一般粗大巨大的笔。比喻记录大事的手笔，也比喻笔力雄健的文词。
 
+**按图索骥**：按照图像寻找好马。原比喻办事拘泥成法，不知灵活变通。现多比喻按线索寻找
+
+**因势利导**：顺应事物的发展趋势，向有利的方向引导
+
+**明察秋毫**：为人十分精明，任何细小的东西也能看得很清楚
+
 ### 三，文言文积累背诵
 
 #### 1，左传
