--- a/_posts/2099-5-14-申论(题型笔记2).md
+++ b/_posts/2099-5-14-申论(题型笔记2).md
@@ -41,6 +41,10 @@ author: Rody
 >13，例子较多，可以用“各项”来代替；也可以举两个+等等
 >
 >14，总结要点时，如果感觉是一个大要点，不能自己过多省略简写、过多意想增加
+>
+>15，写对策题，不让写问题也要写问题，因为问题里可能含有对策没有的关键词，问题不要超过总字数的1/4
+>
+>16，对策类建议先写问题，再写对策，保持“提出问题再解决问题”的思路
 
 `综合题`
 
@@ -106,6 +110,9 @@ author: Rody
 15，比如，。。。（事例）
 16，这就要求。。。；这就说明。。。（分析、结论）
 17，（对比论证）两相对比，。。。（分析）
+18，然而，。。。（理证法）
+19，特别是。。。（事例）
+20，
 ```
 
 ```
