--- a/_posts/2099-5-19-申论(素材积累).md
+++ b/_posts/2099-5-19-申论(素材积累).md
@@ -271,9 +271,12 @@ author: Rody
 #### 2，政治方面
 
 >利民之事，丝发必兴；厉民之事，毫末必去
+>
 >民之所向，政之所往
+>
 >民为邦本，本固邦宁
->权为名所用，情为民所系，利为民所谋
+>
+>权为民所用，情为民所系，利为民所谋
 
 助力中国开启科学发展的新时代，抵达治国理政的新高度，解锁社会主义的新优势
 
