--- a/_posts/2092-9-7-面试(经验总结) .md
+++ b/_posts/2092-9-7-面试(经验总结) .md
@@ -91,7 +91,89 @@ author: Rody
 
 烟笼寒水月笼沙，夜泊秦淮近酒家；商女不知亡国恨，隔江犹唱后庭花
 
+### 三、面试基础课
 
+#### 1，人际关系题
+
+同事
+
+> 1、着眼合作多理解
+>
+> 2、立足长远多承担
+>
+> 3、分工协作多沟通
+>
+> 4、相互学习促成长
+
+领导
+
+> 1、尊重领导权威
+>
+> 2、适应领导风格
+>
+> 3、服从领导安排
+>
+> 4、请示领导意见
+>
+> 5、完成领导任务
+>
+> 6、汇报工作结果
+
+下属
+
+> 1、理解下属有苦衷
+>
+> 2、主动解其难和蒙
+>
+> 3、用好长处多鼓励
+>
+> 4、以身作则长带动
+
+群众
+
+> 1、放低姿态笑脸迎
+>
+> 2、人民至上记心中
+>
+> 3、**情理利法**解问题 
+>
+> 动之以情晓之以理诱之以利规之以法
+>
+> 4、兼顾灵活、原则
+
+##### 1，答题思路
+
+看法：态度、认识、原因、影响、原则等
+
+办法：办人办事（现在和将来）
+
+##### 2，经典例子1
+
+![image-20211023190937878](C:\Users\Lakers_Champions\AppData\Roaming\Typora\typora-user-images\image-20211023190937878.png)
+
+`看法`
+
+轮岗：方式、能力、合作
+
+新部门：新人、新环境、新工作、新能力
+
+职责：工作=>小王=>
+
+`办法`
+
+1，琐事：高标准做好，提前完成
+
+2，职责：协助小王，交流自己原来的经验，或许对小王有用
+
+3，领导：多跟领导请示汇报、增加领导对我的了解
+
+4，自己：提高能力
+
+> **原则**
+>
+> 一切以工作为重
+>
+> 就题答题
 
 
 
