--- a/_posts/2092-5-19-党史记录.md
+++ b/_posts/2092-5-19-党史记录.md
@@ -132,6 +132,18 @@ CPC（Communist Party of China）
 
 不相信有完不成的任务，不相信有克服不了的困难，不相信有战胜不了的敌人
 
+#### 10，一个中心，两个基本点
+
+中国共产党第十三次全国代表大会提出，党在“社会主义初级阶段”的基本路线的核心
+
+> 以经济建设为中心，坚持四项基本原则，坚持改革开放。
+>
+> 四项基本原则：坚持社会主义道路（中国特色社会主义）、坚持无产阶级专政（人民民主专政）、坚持共产党的领导、坚持马克思列宁主义、毛泽东精神。
+
+十八届四中全会，深入贯彻习近平总书记系列重要讲话精神
+
+> 一个中心、两个基本点”，其中“一个中心”是“中华民族伟大复兴的中国梦”；“两个基本点”是“全面深化改革和坚持群众路线”。
+
 ### 党的部分理论
 
 #### 1，三个代表
