--- a/_posts/2099-5-14-申论(题型笔记2).md
+++ b/_posts/2099-5-14-申论(题型笔记2).md
@@ -52,6 +52,22 @@ author: Rody
 >释义并表态：可以直接陈述语句相关的材料实事，有些不必过多解释字词。 相关要素也可以分点
 >
 >2，综合题中，不用太多注意部分之间的连接词语，注意看需要分条部分是意义还是对策，直接列出条目
+>
+>3，综合题词语理解类，分成三个部分，是什么、为什么、怎么办。
+>
+>是什么：解释这个词的含义，加上危害或意义或表现
+>
+>（危害如下，意义如下，表现如下）
+>
+>为什么：分析原因
+>
+>怎么办：提对策
+>
+>4，注意材料当中，区分对策性的内容是想提对策，还是通过对策反映出问题
+>
+>5，中间部分如果表现、危害、意、原因混杂，直接可以写理解如下、原因如下
+>
+>6，分条写的话就是原因有，不分条就是原因是
 
 `公文题`
 
