--- a/_posts/2099-5-19-申论(素材积累).md
+++ b/_posts/2099-5-19-申论(素材积累).md
@@ -463,6 +463,10 @@ author: Rody
 >家是最小国，国是千万家           公益广告
 >先天下之忧而忧，后天下之乐而乐     范仲淹
 
+##### 理想信念
+
+[习总书记对理想信念的相关论述](http://www.ce.cn/xwzx/gnsz/szyw/202111/01/t20211101_37047065.shtml)
+
 ### 四、贵州相关
 
 ##### 1、一个中国梦-博物馆
@@ -624,7 +628,19 @@ author: Rody
 
 思想意识：创新、勤奋、初心、清正廉洁
 
+### 五、文章素材
 
+#### 开头
+
+#### 论证
+
+#### 结尾
+
+`首句`
+
+青松寒不落，碧海阔逾澄   （奋斗、努力）
+
+潮平两岸阔，风正一帆悬   （前途、坦途、顺境、前景）
 
 
 
